+ Improved message display: Avatar now appears next to body of text thus making better use of the given space
+ Fixed bug which prevented choosing existing project files as attachments for a reply
+ Added title for install script
+ Beautified code of several template files
+ Fixed link in the email notifications for message-replies to point to the replied to message instead of the reply

Collabtive 0.6.5
+ Fixed bug when assigning tasks while email notification is deactivated / off
+ Added name of the project to the desktop calendar overlay
+ Fixed date format in calendar overlay on desktop
+ Improved translations: French, Portuguese, Czech, Brasilian Portuguese, Polished
+ Modified max no. of users to show on projects, now 10000 instead of 100
+ Remove the option "All" from the task edit form on single task view
+ Fixed a bug where a folder wouldnt be visible if visible = all was selected
+ Fixed a bug where every timetracker entry was tracked for "today" regardless of selection
+ Removed some debug output in managefile.php
+ Added check for userpermission of file editing, so the edit icon will not show up
any longer in case of missing permission
+ Added missing truncation to project title on the mymessages view
+ Corrected file->delete link for attached files in the message view
+ Backported never due for projects to the frost theme

Collabtive 0.6.4
+ Fixed a path problem with the filesize() function
+ Fixed a bug preventing Safari Users from creating tasks
+ Fixed a bug where an empty user could be assigned to a project
+ Corrected HTML Errors in project->people and project->timetracker views
+ Fixed a bug when editing a task
+ Added generic boder-radius to the CSS so all browsers that support it will display rounded borders (previously only Firefox and Webkit)
+ Removed keyboard shortcuts. they caused confusion and were probably rarely used
+ Buttons in the mainmenue now stay highlighted when an area is selected